Fixed z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,6 @@ P {
 .box {
   margin: 0 2em 2em;
   opacity: 1;
-  z-index: -5;
 }
 
 .bimg {
